This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-04-23:

- [v1.1] Ksh now supports the bash-like case modification expansions
  ${var^pattern}, ${var^^pattern}, ${var,pattern} and ${var,,pattern}.
  These change alphabetic characters in the variable to upper or lower case.
  Unlike in bash, the pattern may match any number of characters.

- The SHOPT_DYNAMIC compile-time option (the ability to load builtins from
  dynamically linked libaries such as libcmd) is now automatically disabled
  for the version of ksh that is linked against the static libast/libcmd/
  libshell libraries, as it cannot work correctly on those. On the version of
  ksh linked against the dynamic version of these libraries (on supported
  systems) it is automatically enabled. Since it is now handled automatically,
  SHOPT_DYNAMIC has been removed from SHOPT.sh as a configurable option.

2025-04-10:

- Fixed a bug (present in all AT&T and 93u+m releases) affecting parsing of
  glob patterns and regular expressions, which caused the following to fail:
    str=aaaa && echo "${str%%aaa}"  # now correctly outputs 'a'
    [[ aaaa =~ aaa$ ]]; echo $?	    # now correctly outputs 0 (true/success)
  and similar, more complicated corner cases involving strings of identical
  characters with a length difference of one.

2025-04-07:

- Fixed a bug where pasting over 80 bytes of multibyte characters into the
  command line over ssh resulted in corrupted input. This problem was caused
  by multibyte characters being split when the typeahead buffer is full.

2025-03-30:

- Fixed: 'stty -echo' failed to turn off echoing of terminal input in
  scripts for subsequent 'read' commands. Bug introduced on 2021-02-11.

- Fixed an issue where any DEBUG trap defined in .kshrc (or other $ENV script)