@@ -2,6 +2,12 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2025-04-24:
+
+- Fixed a bug in the expansion of $* within a here-document: the positional
+  parameters were separated by a hardcoded space instead of the first
+  character of $IFS (which defaults to a space but can be changed).
+
 2025-04-23:
 
 - [v1.1] Ksh now supports the bash-like case modification expansions
